--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         <p>
             <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" target="_top">Contact</a> with me!</h4>
         </p>
-        <p>&copy; Priyanka</p>
+        <p>&copy; Smart Home</p>
     </footer>
     
     <!-- Compiled and minified JavaScript -->
