--- a/public/acremote.html
+++ b/public/acremote.html
@@ -7,11 +7,7 @@
 
   <title> SMART HOME</title>
   <meta name="description" content="Group Project">
-<<<<<<< HEAD
-  <meta name="author" content="Smart Home">
-=======
   <meta name="author" content="Priyanka Polagani">
->>>>>>> 12c86d77f0bfac0f7672af1d82597982512afbdf
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="acremote.css">
@@ -101,16 +97,13 @@
         </div>
     </div>
 
-<<<<<<< HEAD
     <footer>
         <p>
             <h4><a href="userhome.html">Back to Home</a></h4>
             <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" target="_top">Contact</a> with me!</h4>
         </p>
-        <p>&copy; SmarT Home</p>
+        <p>&copy; Priyanka</p>
     </footer>
-=======
->>>>>>> 12c86d77f0bfac0f7672af1d82597982512afbdf
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -118,9 +111,6 @@
     <script src="/socket.io/socket.io.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<<<<<<< HEAD
-=======
 
->>>>>>> 12c86d77f0bfac0f7672af1d82597982512afbdf
 </body>
 </html>
