--- a/public/bulbremote.html
+++ b/public/bulbremote.html
@@ -7,7 +7,7 @@
 
   <title> SMART HOME</title>
   <meta name="description" content="Group Project">
-  <meta name="author" content="Samhitha Makham">
+  <meta name="author" content="Priyanka Polagani">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="bulbremote.css">
@@ -64,6 +64,14 @@
 
         </div>
     </div>
+
+    <footer>
+        <p>
+            <h4><a href="userhome.html">Back to Home</a></h4>
+            <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" target="_top">Contact</a> with me!</h4>
+        </p>
+        <p>&copy; Priyanka</p>
+    </footer>
 
     
     <!-- Compiled and minified JavaScript -->
