--- a/public/tvremote.html
+++ b/public/tvremote.html
@@ -88,11 +88,20 @@
         </div>
     </div>
 
+    <footer>
+        <p>
+            <h4><a href="userhome.html">Back to Home</a></h4>
+            <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" target="_top">Contact</a> with me!</h4>
+        </p>
+        <p>&copy; Priyanka</p>
+    </footer>
+
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- socket IO Served by the server -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="tvapp.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
