--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,7 @@
 
   <title> SMART HOME</title>
   <meta name="description" content="Group Project">
-  <meta name="author" content="Group Project">
+  <meta name="author" content="Priyanka Polagani">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="home.css">
@@ -32,14 +32,13 @@
                     <input type="email" id="email" name="email" placeholder="Email" required>
                     <input type="tel" id="mobile" pattern="\d{3}\d{3}\d{4}" name="mobile" placeholder="Mobile Number" required>
                     <label for="appliances">Choose appliances:</label>
-                    <select id="appliances" name="appliances" size="4" multiple>
+                    <select id="appliances" name="appliances" size="3" multiple>
                         <option value="TV">Telivision</option>
                         <option value="AC">AirConditioner</option>
                         <option value="Light">Lights</option>
                     </select>
                     <div class="bottom-container">
                         <div class="row">
-
                             <div class="col">
                                 <a onclick="newUser()" href="#!" style="color:white" class="btn">Submit</a>
                             </div>
@@ -55,7 +54,7 @@
             <h4><a href="index.html">Back to Home</a></h4>
             <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" target="_top">Contact</a> with me!</h4>
         </p>
-        <p>&copy; Smart Home</p>
+        <p>&copy; Priyanka</p>
     </footer>
 
     <!-- Compiled and minified JavaScript -->
@@ -67,11 +66,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 </body>
-<<<<<<< HEAD
 </html>
-=======
-<<<<<<< HEAD
-</html>
-=======
-</html>
-
