--- a/public/userhome.html
+++ b/public/userhome.html
@@ -7,7 +7,7 @@
 
   <title> SMART HOME</title>
   <meta name="description" content="Group Project">
-  <meta name="author" content="Smart Home">
+  <meta name="author" content="Priyanka Polagani">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="userhome.css">
@@ -111,7 +111,7 @@
         <p>
             <h4>Get in <a href="mailto:priyankapolagani12@gmail.com?Subject=Hello!" style="color:white" target="_top">Contact</a> with me!</h4>
         </p>
-        <p>&copy; Smart Home</p>
+        <p>&copy; Priyanka</p>
     </footer>
     
     <!-- Compiled and minified JavaScript -->
@@ -124,4 +124,3 @@
 
 </body>
 </html>
-
