--- a/public/tvremote.html
+++ b/public/tvremote.html
@@ -18,7 +18,7 @@
         <h1>TV Remote</h1>
         <div class="remote-buttons">
             <section>
-                <button id="power" class="power">
+                <button onclick="powerAction() "id="power" class="power">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22.1 22.1" style="enable-background:new 0 0 22.1 22.1;" xml:space="preserve">
                         <path d="M11.1,22.1C11.1,22.1,11.1,22.1,11.1,22.1c-2.7,0-5.2-1-7.1-2.9C0.1,15.2,0.1,8.9,4,5c0.4-0.4,1-0.4,1.4,0
         c0.4,0.4,0.4,1,0,1.4c-3.1,3.1-3.1,8.2,0,11.3c1.5,1.5,3.5,2.3,5.7,2.3c0,0,0,0,0,0c2.1,0,4.1-0.8,5.7-2.3c3.1-3.1,3.1-8.2,0-11.3
@@ -27,7 +27,7 @@
                     </svg>
                 </button>
 
-                <button id="source" class="source">
+                <button onclick="toSource()" id="source" class="source">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="55.9" height=55.9 viewBox="0 0 55.9 55.9" style="enable-background:new 0 0 55.9 55.9;" xml:space="preserve">
                         <g id="XMLID_5_">
                             <path class="st0" d="M50.5,5.4h-45c-2.8,0-5,2.3-5,5v10h5v-10h45v35.1h-45V35.4h-5v10c0,2.8,2.3,5,5,5h45
@@ -38,7 +38,7 @@
             </section>
 
             <section class="vol-section">
-                <button id="vol-up">
+                <button onclick="volumeUp()" id="vol-up">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 82 82" style="enable-background:new 0 0 82 82;" xml:space="preserve">
                         <g class="st0">
                             <polygon class="st1" points="0,24.4 0,57.5 17.1,57.5 49.4,75.1 49.4,6.8 17.1,24.4 	" />
@@ -52,7 +52,7 @@
                     </svg>
                 </button>
 
-                <button id="vol-down">
+                <button onclick="volumeDown()" id="vol-down">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 82 82" style="enable-background:new 0 0 82 82;" xml:space="preserve">
                         <g>
                             <polygon points="0,24.4 0,57.5 17.1,57.5 49.4,75.1 49.4,6.8 17.1,24.4 	" />
@@ -63,24 +63,20 @@
             </section>
 
             <section class="channel-section">
-                <button id="channel-up"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
-    
+                <button onclick="youTube()" id="channel-up">
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)" stroke="none">
-                            <path d="M196 516 l-116 -124 0 -105 c0 -58 4 -108 9 -111 4 -3 34 21 64 53
-    l56 59 3 -142 3 -141 105 0 105 0 3 141 3 142 56 -59 c30 -32 60 -56 64 -53 5
-    3 9 53 9 111 l0 105 -116 124 c-65 68 -120 124 -124 124 -4 0 -59 -56 -124
-    -124z" />
+                            <path d="M165 510 c-73 -12 -91 -30 -101 -107 -10 -79 1 -209 20 -238 20 -31 74 -40 236 -40 249 0 255 5 255 195 0 140 -11 172 -62 184 -51 11 -287 15 -348 6z m245 -190 c0 -3 -32 -22 -70 -43 l-70 -37 0 80 0 80 70 -37 c38 -21 70 -40 70 -43z"/>
                         </g>
                     </svg>
                 </button>
 
-                <button id="channel-down"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
-    
+                <button onclick="mute()" id="channel-down">
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)" stroke="none">
-                            <path d="M217 634 c-4 -4 -7 -69 -7 -145 l0 -138 -56 60 c-31 32 -61 56 -65
-    53 -5 -3 -9 -53 -9 -112 l1 -107 119 -125 120 -125 120 125 119 125 1 107 c0
-    59 -4 109 -9 112 -4 3 -34 -21 -64 -53 l-56 -59 -3 142 -3 141 -101 3 c-55 1
-    -103 0 -107 -4z" />
+                            <path d="M228 473 l-88 -56 0 -97 0 -97 89 -57 c49 -31 91 -56 95 -56 3 0 6 94 6 210 0 116 -3 210 -7 210 -5 0 -47 -26 -95 -57z"/>
+                            <path d="M60 320 l0 -90 30 0 30 0 0 90 0 90 -30 0 -30 0 0 -90z"/>
+                            <path d="M430 390 c0 -8 12 -27 27 -42 l27 -28 -27 -28 c-40 -42 -33 -62 7 -22 l35 33 37 -32 c47 -42 58 -31 14 14 l-34 35 34 35 c44 45 33 56 -14 14 l-37 -32 -35 33 c-20 20 -34 28 -34 20z"/>
                         </g>
                     </svg>
                 </button>
